--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.2/build/cssnormalize/cssnormalize-min.css">
-		<link rel="stylesheet" type="text/css" href="/css/me-styles.css">
+		<link rel="stylesheet" type="text/css" href="css/me-styles.css">
     </head>
     <body class="f">
 
