--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                  <ul class="list__inline">
 
-                        <li><a href="explore-discover-innovate" title="Explore Discover Innovate" class="btn btn--contact">View the illustrations</a></li>
+                        <li><a href="explore-discover-innovate.html" title="Explore Discover Innovate" class="btn btn--contact">View the illustrations</a></li>
                         <li><a href="https://medium.com/@john_cowen/stop-hallucinating-39a8cc9258f4" title="Stop Hallucinating on Medium" class="btn btn--contact">Read about the creative process involved in this project</a></li>
                     </ul>
 
