--- a/explore-discover-innovate.html
+++ b/explore-discover-innovate.html
@@ -31,7 +31,6 @@
 </div><!--/branding-->         <div class="contact-bar">
     <ul class="nav nav--contact">
         <li><a href="http://johncowen.co.uk" title="Home Page">Home</a></li>
-        <li><a href="/blog" title="Read Blog.">Blog</a></li>
     </ul>
  </div>        <div class="main-container">
 
@@ -77,7 +76,7 @@
 				<ul class="list__inline">
                         <li><a href="mailto:john@johncowen.co.uk" title="Email me" class="btn--contact btn">Contact Me</a></li>
                         <li><a href="https://www.linkedin.com/in/cowenjohn" title="Linked In" class="btn--linkedin btn"><span class="icon-linkedin"></span> Connect on Linked-in</a></li>
-                        <li><a href="/" title="Home page" class="btn--contact btn">Home Page</a></li>
+                        <li><a href="http://johncowen.co.uk" title="Home page" class="btn--contact btn">Home Page</a></li>
                     </ul>
                    
             </div> <!-- #main -->
