--- a/arranger/index.html
+++ b/arranger/index.html
@@ -91,7 +91,7 @@
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS - SLIDE 1 - VIDEO
 				============================================================================================================ -->
-				<section id="firstcall" class="arranger-takes-call home-slide" data-background-video="media/v2.webm" data-background-video-loop="true" >		
+				<section id="firstcall" class="arranger-takes-call home-slide" data-background-video="media/v2.mp4, media/v2.webm" data-background-video-loop="true" >		
                 <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 1A
 				============================================================================================================ -->
