--- a/arranger/index.html
+++ b/arranger/index.html
@@ -91,7 +91,7 @@
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS - SLIDE 1 - VIDEO
 				============================================================================================================ -->
-				<section id="firstcall" class="arranger-takes-call home-slide" data-background-video="media/v2.mp4, media/v2.webm" data-background-video-loop="true" >		
+				<section id="firstcall" class="arranger-takes-call home-slide" data-background-video="media/v2.mp4,media/v2.webm" data-background-video-loop="true" >		
                 <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 1A
 				============================================================================================================ -->
@@ -101,7 +101,7 @@
 								<img src="img/i-phone.svg" width="100" />
 							</div>
 							<div class="wide-headline__body">
-								<h1 class="pica text--white">Arranger receives a call</h1>
+								<h1 class="pica text--white">Arranger receives a call.</h1>
 							</div>
 						</div>
 					</section>              
