--- a/arranger/index.html
+++ b/arranger/index.html
@@ -90,8 +90,8 @@
                 <!-- BEGINNING OF ARRANGEMENT REQUESTS SLIDE SET -->
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS - SLIDE 1 - VIDEO
-				============================================================================================================ -->
-				<section id="firstcall" class="arranger-takes-call home-slide" data-background-video="media/v1.mp4,media/v1.webm" data-background-video-loop="true" >		
+				============================================================================================================ -->		
+				<section data-background-video="media/v1.mp4,media/v1.webm" data-background-video-loop="true" id="firstcall" class="home-slide">
                 <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 1A
 				============================================================================================================ -->
