--- a/arranger/index.html
+++ b/arranger/index.html
@@ -101,7 +101,7 @@
 								<img src="img/i-phone.svg" width="100" />
 							</div>
 							<div class="wide-headline__body">
-								<h1 class="pica text--white">Arranger receives a call.</h1>
+								<h1 class="pica text--white">Arranger receives a call</h1>
 							</div>
 						</div>
 					</section>              
