--- a/arranger/index.html
+++ b/arranger/index.html
@@ -55,7 +55,7 @@
 						HOME PAGE LANDING PAGE
 				============================================================================================================ -->
 
-				<section data-background-video="media/v1.mp4,media/v1.webm" data-background-video-loop="true" id="home" class="home-slide">
+				<section data-background-video="http://johncowen.co.uk/arranger/media/v1.mp4,http://johncowen.co.uk/arranger/media/v1.ogv,http://johncowen.co.uk/arranger/media/v1.webm" data-background-video-loop="true" id="home" class="home-slide">
 					<div class="has-video-overlay">
 						<div class="top-layer text--center">
 							<img src="img/arranger-white.png" width="240px" style="margin-top: 20%;" />
@@ -91,7 +91,7 @@
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS - SLIDE 1 - VIDEO
 				============================================================================================================ -->		
-				<section data-background-video="media/v1.mp4,media/v1.webm" data-background-video-loop="true" id="firstcall" class="home-slide">
+				<section data-background-video="http://johncowen.co.uk/arranger/media/v2.mp4,http://johncowen.co.uk/arranger/media/v2.ogv,http://johncowen.co.uk/arranger/media/v2.webm" data-background-video-loop="true" id="firstcall" class="home-slide">
                 <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 1A
 				============================================================================================================ -->
