--- a/arranger/index.html
+++ b/arranger/index.html
@@ -55,7 +55,7 @@
 						HOME PAGE LANDING PAGE
 				============================================================================================================ -->
 
-				<section data-background-video="http://johncowen.co.uk/arranger/media/v1.mp4,http://johncowen.co.uk/arranger/media/v1.ogv,http://johncowen.co.uk/arranger/media/v1.webm" data-background-video-loop="true" id="home" class="home-slide">
+				<section data-background-video="http://johncowen.co.uk/arranger/media/v1.mp4" data-background-video-loop="true" id="home" class="home-slide">
 					<div class="has-video-overlay">
 						<div class="top-layer text--center">
 							<img src="img/arranger-white.png" width="240px" style="margin-top: 20%;" />
@@ -63,7 +63,7 @@
 						<div style="display: flex;" class="top-layer home-slide-links stretch">
 							<a href="#/arrangement" class="home-slide-link__arrangemnet">
 								<svg width="24" height="24" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1600 1240q0 27-10 70.5t-21 68.5q-21 50-122 106-94 51-186 51-27 0-53-3.5t-57.5-12.5-47-14.5-55.5-20.5-49-18q-98-35-175-83-127-79-264-216t-216-264q-48-77-83-175-3-9-18-49t-20.5-55.5-14.5-47-12.5-57.5-3.5-53q0-92 51-186 56-101 106-122 25-11 68.5-21t70.5-10q14 0 21 3 18 6 53 76 11 19 30 54t35 63.5 31 53.5q3 4 17.5 25t21.5 35.5 7 28.5q0 20-28.5 50t-62 55-62 53-28.5 46q0 9 5 22.5t8.5 20.5 14 24 11.5 19q76 137 174 235t235 174q2 1 19 11.5t24 14 20.5 8.5 22.5 5q18 0 46-28.5t53-62 55-62 50-28.5q14 0 28.5 7t35.5 21.5 25 17.5q25 15 53.5 31t63.5 35 54 30q70 35 76 53 3 7 3 21z" fill="#fff"/></svg>
-								First call
+								First call.
 							</a>
 							<a href="#/diary" class="home-slide-link__diary">
 								<svg width="24" height="24" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M813 1299l614-614q19-19 19-45t-19-45l-102-102q-19-19-45-19t-45 19l-467 467-211-211q-19-19-45-19t-45 19l-102 102q-19 19-19 45t19 45l358 358q19 19 45 19t45-19zm851-883v960q0 119-84.5 203.5t-203.5 84.5h-960q-119 0-203.5-84.5t-84.5-203.5v-960q0-119 84.5-203.5t203.5-84.5h960q119 0 203.5 84.5t84.5 203.5z"/></svg>
