--- a/arranger/index.html
+++ b/arranger/index.html
@@ -55,7 +55,7 @@
 						HOME PAGE LANDING PAGE
 				============================================================================================================ -->
 
-				<section data-background-video="http://johncowen.co.uk/arranger/media/v1.mp4" data-background-video-loop="true" id="home" class="home-slide">
+				<section data-background-video="media/v1.mp4" data-background-video-loop="true" id="home" class="home-slide">
 					<div class="has-video-overlay">
 						<div class="top-layer text--center">
 							<img src="img/arranger-white.png" width="240px" style="margin-top: 20%;" />
@@ -91,7 +91,7 @@
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS - SLIDE 1 - VIDEO
 				============================================================================================================ -->		
-				<section data-background-video="http://johncowen.co.uk/arranger/media/v2.mp4" data-background-video-loop="true" id="firstcall" class="home-slide">
+				<section data-background-video="media/v2.mp4" data-background-video-loop="true" id="firstcall" class="home-slide">
                 <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 1A
 				============================================================================================================ -->
@@ -134,7 +134,7 @@
 				<!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS RIGHT - SLIDE 3 - VIDEO
 				============================================================================================================ -->
-				<section class="bereaved-portal" data-background-video="media/v3.webm" data-background-video-loop="true">
+				<section class="bereaved-portal" data-background-video="media/v3.mp4" data-background-video-loop="true">
 
 					
 
@@ -185,7 +185,7 @@
 				    <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS RIGHT - SLIDE 4 - VIDEO
 				    ============================================================================================================ -->
-				<section class="arrangement-wishlist" data-background-video="media/v4.webm" data-background-video-loop="true" id="arrangement">
+				<section class="arrangement-wishlist" data-background-video="media/v4.mp4" data-background-video-loop="true" id="arrangement">
 				    <!-- =========================================================================================================== 
 						ARRANGEMENT REQUESTS DOWN - SLIDE 4A
 				    ============================================================================================================ -->
@@ -242,7 +242,7 @@
                 <!-- =========================================================================================================== 
 						POST FUNERAL COMMUNICATION VIDEO SLIDE 1
 				============================================================================================================ -->
-				<section id="payments" class="aftercare" data-background-video="media/v6.webm" data-background-video-loop="true">
+				<section id="payments" class="aftercare" data-background-video="media/v6.mp4" data-background-video-loop="true">
                     <!-- =========================================================================================================== 
 						POST FUNERAL COMMUNICATION DOWN - SLIDE 1A
 				    ============================================================================================================ -->
