--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         </div>
     </div>
 
+    <div class="o-content">
+        <div class="o-content__body" style="border: 1px solid #000; padding: 1rem; margin-bottom: 2rem;">
+            <p style="max-width: 800px; margin-bottom: 0;">A new website with more details about all the work and ability to buy originals and prints is coming very soon. In the meantime, if you want to contact me about my work please email <a href="mailto:john@johncowen.co.uk">john@johncowen.co.uk</a>.</p>
+        </div>
+    </div>
+
     <div class="o-content u-push-bottom--large">
         <div class="c-gallery__grid js-gallery o-content__body">
 
